# pivotal_sae

./: .gitignore  Dockerfile  README.md  copy.sh  docker_name  lint.sh  pyproject.toml  run.sh  run_tb.sh  setup.sh
nix-utils/: flake.nix
src/sae_hacking/: convert_json_to_safetensors.py  filter_for_cluster.py  filter_results.py  filter_results2.py  find_4tuples.py  gather_high_activations.py  gather_high_activations_llm.py  gemma_ablate.py  gemma_analyze.py  gemma_cluster.py  gemma_cooccurences.py  gemma_cooccurrences.py  gemma_graph.py  gemma_selective_ablate.py  gemma_utils.py  graph_network.py  json_utils.py  l1_penalty.py  look_for_cosine_sim_pairs.py  look_for_pairs.py  neuronpedia_utils.py  plot_effect_l0.py  print_cooccurrences.py  prompt_client.py  prompt_server.py  run_on_prompt.py  sae_lens_releases.py  safetensor_utils.py  steer.py  timeprint.py  train_sae.py  train_topk_sae.py  train_topk_sae_toy.py  try_highlights.py
src/sae_hacking/common/: obtain_activations.py  sae.py  setting_up.py  toy_dataset.py
src/scripts/: binomial.py  cosine.py
tests/: test_aux_loss.py  test_children.py  test_dot.py  test_ema.py  test_features.py  test_gemma_ablate.py  test_gemma_cooccurrences.py  test_graph_network.py  test_imports.py  test_json_utils.py  test_plot.py  test_safetensor_utils.py  test_saving.py
