[project]
name = "sae_hacking"
version = "0.1.0"
description = "Add your description here"
dependencies = [
    "beartype>=0.14.1",
    "jaxtyping==0.2.33",
    "tensorboard==2.17.1",
    "coolname==2.2.0",
    "accelerate==0.33.0",
    "datasets==2.20.0",
    "huggingface-hub[cli]==0.24.5",
    "torch==2.4.0",
    "transformers>=4.48.3",
    "openai>=1.45.0",
    "python-dotenv>=1.0.1",
    "pydantic>=2.9.1",
    "tqdm>=4.66.5",
    "seaborn>=0.13.2",
    "pandas>=2.2.2",
    "einops>=0.8.0",
    "pyyaml>=6.0.2",
    "scipy>=1.13.1",
    "safetensors>=0.4.5",
    "vastai>=0.2.8",
    "gitpython>=3.1.44",
    "scikit-learn>=1.6.1",
    "aiohttp>=3.11.11",
    "plotly>=5.24.1",
    "sae-lens>=5.5.1",
    "networkx[default]>=3.2.1",
    "pyvis>=0.3.2",
    "zstandard>=0.22.0",
]
readme = "README.md"
requires-python = ">= 3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff.lint]
ignore = ["F722"]
extend-select = ["I"]

[tool.ruff.lint.isort]
known-first-party = ["sae_hacking"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/sae_hacking"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.3",
]
